# stackscaffold

./: .gitignore  README.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: lib.rs
crates/deployer/: Cargo.toml
crates/deployer/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/process_supervisor/: Cargo.toml
crates/process_supervisor/src/: lib.rs
crates/scaffold/: Cargo.toml
crates/scaffold/src/: lib.rs
crates/watcher/: Cargo.toml
crates/watcher/src/: lib.rs
frontend-template/: package.json  scaffold.config.ts  tailwind.config.ts  tsconfig.json
frontend-template/scripts/: export-abi.mjs
frontend-template/src/: scaffold.config.ts
frontend-template/src/app/: layout.tsx  page.tsx
frontend-template/src/components/: WalletConnect.tsx
frontend-template/src/components/debug/: DebugContracts.tsx
templates/: debug_ui.tsx.tera
